--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
     text-align: center;
     background-image: url('img/FAMILIA.jpg'); /* Caminho da sua imagem de fundo */
     background-size: cover;
-    background-position: center 0,5px ;  
+    background-position: center 0.5px;
     padding-top: 20px;
 }
 
@@ -43,6 +43,10 @@ header p {
 
 main {
     padding: 20px;
+}
+
+.about-section {
+    margin-bottom: 20px;
 }
 
 .gallery-container {
@@ -69,6 +73,45 @@ main {
 
 .gallery-items:hover {
     transform: scale(1.05);
+}
+
+.donation-section {
+    text-align: center;
+    margin-top: 50px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.pix-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.qr-code {
+    max-width: 200px;
+    margin-bottom: 20px;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.hidden {
+    display: none;
 }
 
 .contact-section {
